# geometry-os

./: .gitignore  AGENT_MESSAGING.md  AI_GUIDE.md  ALU.md  BUS.md  CIRCUITS.md  CLOCK.md  Cargo.toml  HEARTBEAT.md  HEATMAP.md  INJECTOR.md  INVENTORY.md  PROMPT_ONBOARDING.md  QUICKSTART.md  README.md  RELEASE_NOTES.md  ROADMAP.md  ROADMAP_GENERATED.md  ROADMAP_V2.md  SCANNER.md  SOCIETY.md  SOVEREIGN_SHELL.md  SPATIAL_PHYSICS.md  SPATIAL_SWARM.md  WATCHER.md  agent_messaging_hud.wgsl  atomic_telemetry.wgsl  build.sh  chain_dev.py  chained_program.spv  check_elf.py  circuit-check.js  circuit-watcher.js  circuit-watcher.sh  database_setup.py  demo-alu.sh  demo-bus.sh  demo-clock.sh  demo-complete.sh  demo-heatmap.sh  (+62 more)
.ai_daemon/: learnings.md
.autodev/: .gitignore  context_pack_state.json  decide_state.json  phase64_spec.md  snapshot_state.json  task_split_state.json
.bridge/: README.md  current_prompt.txt  orchestrator.pid  orchestrator.py  orchestrator_progress.py  watchdog.py  worker_prompt.txt
.loop/: PERf-optimization.md  README.md  STATE.md  SYSTEM.md  TASK.md  current_prompt.txt  runner.py  schema.md  start.py
.ouroboros/: goal.yaml  queue_dashboard.js  safety.yaml
.planning/: PROJECT.md
benches/: assembler_bench.rs  vm_bench.rs
circuits/: clock-oscillator.json  half-adder.json  sr-flipflop.json  test-and-gate.json
core/: atlas_gen.py  geo_cc.py
demo/: index.html
docs/: API_REFERENCE.md  ARCHITECTURE.md  AUTHORING_PATHS.md  CANVAS_TEXT_SURFACE (Copy).md  CANVAS_TEXT_SURFACE.md  CANVAS_TEXT_SURFACE_key.json  CODE_PIXEL_EXECUTION.md  GPU_NATIVE_COMPILER.md  INFINITE_MAP.md  NORTH_STAR.md  RISCV_HYPERVISOR.md  ROADMAP_PIXEL_DRIVING_PIXELS.md  SELF_MODIFYING_GUIDE.md  SPEC.md  TEXT_AS_PIXEL_IMAGE.md  perf-optimization.md
examples/: boot_100m.rs  boot_100m_noinitrd.rs  boot_200m.rs  boot_20m.rs  boot_30m_check.rs  boot_500m.rs  boot_5m.rs  boot_5m_diag.rs  boot_all_regs.rs  boot_alloc_fail.rs  boot_and_check.rs  boot_and_exact.rs  boot_and_trace.rs  boot_autopt.rs  boot_bad_ppn.rs  boot_bootargs.rs  boot_branch_trace.rs  boot_bss_check.rs  boot_calls.rs  boot_chain_diag.rs  boot_check.rs  boot_check_corruption.rs  boot_check_l1.rs  boot_check_mem.rs  boot_check_table.rs  boot_check_tramp.rs  boot_clean.rs  boot_cmdline.rs  boot_cmdline2.rs  boot_console.rs  boot_crash_diag.rs  boot_crash_instr.rs  boot_crash_pt.rs  boot_crash_trace.rs  boot_data_check.rs  boot_debug.rs  boot_debug2.rs  boot_debug_fault.rs  boot_debug_stuck.rs  boot_decode_loop.rs  (+425 more)
lib/: math.asm  stdlib.asm
open_brain/: __init__.py  agent_bridge.py  db.py  embeddings.py  geometric_state.py  memory_glyph.py  spirv_encoder.py  visual_mcp.py
pixelflow/: README.md
programs/: README.md  ai_terminal.asm  ball.asm  breakout.asm  calendar.asm  cat.asm  chatbot.asm  checkerboard.asm  code_evolution.asm  debug_monitor.asm  fractal_gen.asm  hermes_term.asm  host_term.asm  host_term_v4.asm  infinite_map.asm  infinite_map_pxpk.asm  living_map.asm  maze.asm  mirror.asm  multiproc.asm  nano_editor.asm  netmon.asm  pixelflow.asm  push_pop_test.asm  rainbow.asm  rings.asm  roguelike.asm  roguelike_draft.asm  self_host.asm  self_writer.asm  shell.asm  snake.asm  sprite_demo.asm  term_mux.asm  terminal.asm  tetris.asm  vfs_viewer.asm  wirecube.asm  world_desktop.asm
rfl_boot_output/: conversation.jsonl  conversation.md  (+1 more)
(+318 files in other folders)
