[package]
name = "pixel-formula-gpu"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "formula"
path = "src/main.rs"

[[bin]]
name = "agent"
path = "src/agent_main.rs"

[[bin]]
name = "injector"
path = "src/injector.rs"

[[bin]]
name = "scanner"
path = "src/scanner.rs"

[[bin]]
name = "heatmap"
path = "src/heatmap.rs"

[[bin]]
name = "bridge"
path = "src/bridge.rs"

[dependencies]
rand = "0.8"
base64 = "0.22"
wgpu = "0.19"
image = "0.24"
bytemuck = { version = "1.14", features = ["derive"] }
env_logger = "0.10"
futures = "0.3"
memmap2 = "0.9"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
regex = "1"
winit = "0.29"

[[bin]]
name = "neural-pipe"
path = "src/bin/neural_pipe.rs"

[[bin]]
name = "siphon-demo"
path = "src/bin/siphon-demo.rs"

[[bin]]
name = "circuit-runner"
path = "src/bin/circuit-runner.rs"

[[bin]]
name = "pixelvm"
path = "src/bin/pixelvm.rs"

[[bin]]
name = "gpu-vm"
path = "src/bin/gpu-vm.rs"

[[bin]]
name = "riscv"
path = "src/bin/riscv.rs"

[[bin]]
name = "fb-riscv"
path = "src/bin/fb-riscv.rs"

[[bin]]
name = "fb-ascii"
path = "src/bin/fb-ascii.rs"

[[bin]]
name = "sovereign-shell"
path = "src/bin/sovereign_shell.rs"

[[bin]]
name = "agent-messaging"
path = "src/bin/agent_messaging.rs"

[[bin]]
name = "spatial-physics"
path = "src/bin/spatial_physics.rs"

[build-dependencies]
regex = "1"

[[bin]]
name = "spatial-swarm"
path = "src/bin/spatial_swarm.rs"

[[bin]]
name = "spatial-swarm-test"
path = "src/bin/spatial_swarm_test.rs"

[[bin]]
name = "gravity-wells"
path = "src/bin/gravity_wells.rs"

[[bin]]
name = "interactive-swarm"
path = "src/bin/interactive_swarm.rs"

[[bin]]
name = "nested-wells"
path = "src/bin/nested_wells.rs"

[[bin]]
name = "z-order"
path = "src/bin/z_order.rs"

[[bin]]
name = "resize-handles"
path = "src/bin/resize_handles.rs"

[[bin]]
name = "minimize-maximize"
path = "src/bin/minimize_maximize.rs"
