[package]
name = "geometry_os"
version = "1.0.0"
edition = "2021"

[dependencies]
# Library deps (always available)
# -- none needed, vm/assembler are pure Rust

# GUI binary deps (only needed for native build)
minifb = { version = "0.27", optional = true }
arboard = { version = "3", optional = true }
png = { version = "0.18.1", optional = true }

[features]
default = ["native"]
native = ["minifb", "arboard", "png"]

[[bin]]
name = "geometry_os"
path = "src/main.rs"
required-features = ["native"]
