[package]
name = "geometry_os"
version = "1.0.0"
edition = "2021"

[dependencies]
# Library deps (always available)
libc = "0.2"
serde_json = "1"
png = "0.18.1"

# GUI binary deps (only needed for native build)
minifb = { version = "0.27", optional = true }
arboard = { version = "3", optional = true }

[features]
default = ["native"]
native = ["minifb", "arboard"]

[[bin]]
name = "geometry_os"
path = "src/main.rs"
required-features = ["native"]

[[bin]]
name = "fuzzer"
path = "src/fuzzer.rs"

[[bin]]
name = "riscv_fuzzer"
path = "src/riscv_fuzzer.rs"

[[bin]]
name = "geo_mcp_server"
path = "src/mcp_server.rs"

[dev-dependencies]
tempfile = "3"
